--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>漫展战术终端 Final</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -24,28 +24,32 @@
     </script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
-        /* 核心：移除 overscroll-behavior 防止滚动被锁，启用硬件加速 */
-        body { 
+        /* --- 核心修复：锁死网页层级滚动 --- */
+        html, body { 
+            width: 100%;
+            height: 100%;
+            overflow: hidden; /* 禁止 html/body 产生滚动条 */
+            margin: 0;
+            padding: 0;
+            overscroll-behavior: none; /* 禁止浏览器橡皮筋回弹 */
             font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text", "Helvetica Neue", Arial, sans-serif; 
             background-color: #f8fafc; 
             -webkit-tap-highlight-color: transparent;
         }
-        .aspect-card { aspect-ratio: 3/4; }
+
+        /* 列表容器 */
         .hide-scrollbar::-webkit-scrollbar { display: none; }
         .hide-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+        .aspect-card { aspect-ratio: 3/4; }
         
         .status-pending { border-left: 5px solid #94a3b8; }
         .status-bought { border-left: 5px solid #06b6d4; }
         .status-soldout { border-left: 5px solid #ef4444; opacity: 0.7; filter: grayscale(100%); }
         .status-visited { border-left: 5px solid #8b5cf6; }
 
-        /* 极简动画：减少属性变化，只动 transform */
-        .slide-up-enter-active, .slide-up-leave-active { 
-            transition: transform 0.25s cubic-bezier(0.25, 1, 0.5, 1); 
-        }
-        .slide-up-enter-from, .slide-up-leave-to { 
-            transform: translate3d(0, 100%, 0); 
-        }
+        /* 动画配置 */
+        .slide-up-enter-active, .slide-up-leave-active { transition: transform 0.25s cubic-bezier(0.25, 1, 0.5, 1); }
+        .slide-up-enter-from, .slide-up-leave-to { transform: translate3d(0, 100%, 0); }
 
         .menu-pop-enter-active, .menu-pop-leave-active { transition: opacity 0.2s, transform 0.2s; }
         .menu-pop-enter-from, .menu-pop-leave-to { opacity: 0; transform: translateY(10px); }
@@ -53,7 +57,6 @@
         .fade-enter-active, .fade-leave-active { transition: opacity 0.2s; }
         .fade-enter-from, .fade-leave-to { opacity: 0; }
 
-        /* 强制 GPU 渲染图钉 */
         .map-pin {
             position: absolute; transform: translate3d(-50%, -100%, 0);
             filter: drop-shadow(0 2px 2px rgba(0,0,0,0.3)); 
@@ -62,16 +65,12 @@
         }
         @keyframes bounce { from { transform: translate3d(-50%, -100%, 0); } to { transform: translate3d(-50%, -115%, 0); } }
 
-        /* 性能优化类：拖拽时隐藏阴影，提升帧率 */
-        .dragging-mode {
-            box-shadow: none !important;
-            transition: none !important;
-        }
+        .dragging-mode { box-shadow: none !important; transition: none !important; }
     </style>
 </head>
 <body>
 
-<div id="app" class="w-full h-screen flex flex-col bg-slate-50 overflow-hidden relative">
+<div id="app" class="w-full h-[100dvh] flex flex-col bg-slate-50 overflow-hidden relative">
 
     <header class="bg-white/95 backdrop-blur-sm px-5 py-4 z-10 flex justify-center items-center sticky top-0 shrink-0 border-b border-gray-100 shadow-sm">
         <div class="font-bold text-lg text-gray-800 flex items-center gap-2">
@@ -80,7 +79,7 @@
         </div>
     </header>
 
-    <main class="flex-1 overflow-y-auto p-4 hide-scrollbar pb-40"
+    <main class="flex-1 overflow-y-auto p-4 hide-scrollbar pb-40 overscroll-contain"
           @touchstart="handleListTouchStart" 
           @touchend="handleListTouchEnd">
         
