--- a/index.html
+++ b/index.html
@@ -318,7 +318,16 @@
     const DB_NAME = 'ComicConDB';
     const DB_VERSION = 2;
     
-    // --- 核心修复：支持参数化压缩 ---
+    // --- 核心：无损读取原图函数 (用于地图) ---
+    const readFileOriginal = (file) => {
+        return new Promise((resolve) => {
+            const reader = new FileReader();
+            reader.onload = (e) => resolve(e.target.result); // 直接返回原数据，不压缩
+            reader.readAsDataURL(file);
+        });
+    };
+
+    // --- 核心：封面压缩函数 (用于封面，保持列表流畅) ---
     const compressImage = (file, maxSize = 800, quality = 0.6) => {
         return new Promise((resolve) => {
             const reader = new FileReader();
@@ -557,11 +566,12 @@
             const openMapManager = () => isMapManagerOpen.value = true;
             const triggerAddMap = () => { if(mapInput.value) mapInput.value.click(); };
             
+            // --- 核心修改：地图使用 readFileOriginal (不压缩) ---
             const handleAddMap = async (e) => {
                 const file = e.target.files[0];
                 if (!file) return;
-                // 核心：地图使用高清配置 (3000px, 0.9)
-                const base64 = await compressImage(file, 3000, 0.9);
+                // 改用 readFileOriginal，不进行任何压缩
+                const base64 = await readFileOriginal(file);
                 const newMap = { id: Date.now(), name: `场馆 ${maps.value.length + 1}`, image: base64 };
                 maps.value.push(newMap);
                 await dbUtils.saveSetting('maps', maps.value);
@@ -586,9 +596,9 @@
             };
             const switchEditMap = (id) => form.mapId = id;
 
+            // --- 核心：封面图继续使用压缩 ---
             const handleCoverUpload = async (e) => {
                 const file = e.target.files[0];
-                // 核心：封面使用低清配置 (800px, 0.6)
                 if (file) form.cover = await compressImage(file, 800, 0.6);
             };
 
@@ -604,7 +614,7 @@
                 isEditing.value = true; activeBooth.value = null;
             };
 
-            const setMapPoint = () => {}; // Legacy
+            const setMapPoint = () => {}; 
 
             const saveForm = async () => {
                 if (!form.name) return alert('请填写摊位名称');
